--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 }
             }
         },
-        location => location.hash.startsWith('#/app1'),
+        location => location.hash.startsWith('#app1'),
         {store: {name: 'ceshi'}}
         )
         // 启动应用
