* 导入方式修改

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <a onclick="a()">应用1</a>
     <a onclick="b()">应用2</a>
-    <script src="/lib/umd/single-spa.js"></script>
+    <script src="/lib/single-spa.js"></script>
     <script>
 
         function a() {
